# Cpp

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json
Assignment_1/: Task_1.cpp  Task_2.cpp  Task_5.cpp  Task_6_CRUD  Task_6_CRUD.cpp  Tugas_10.cpp  Tugas_6_CRUD.cpp  Tugas_8.1.cpp  Tugas_8.2.cpp  Tugas_8.3  Tugas_8.3.cpp  Tugas_8.4  Tugas_8.4.cpp  double_circular_linkedlist.cpp
BraveHub_Qt_Ep-4/: CMakeLists.txt  Test.h  main.cpp  test.cpp
BraveHub_Qt_Ep-5/: CMakeLists.txt  main.cpp
Private/: Materi_CRUD.md  firstProgram2.cpp  firstProgram3.cpp
Private/BroCode/: 02_variables.cpp  03_const.cpp  05_typeDefAliases.cpp  08_userInput.cpp  10. Hypotenuse Calculator.cpp  4. Namespaces.cpp  5. TypeDef & Aliases.cpp  6. Arithmetic.cpp  7. Type Conversion.cpp  9. Math Functions.cpp  n2_pointer.cpp  oop.cpp
Private/LearnCpp/: 0212_functions.cpp  0221_functionReturn.cpp  0222_functionReturn.cpp  0223_functionReturn.cpp  0231_voidFunctions.cpp  0232_voidFunctions.cpp  0241_functionParameters.cpp  0243_functionParameters.cpp  0244_functionParameters.cpp  0245_functionParameters.cpp  14.1.1_OOP.cpp  14.1.2_OOP.cpp  1411_OOP.cpp  1412_OOP.cpp  1421_classes.cpp  1422_classes.cpp  2.1.1_Functions.cpp  2.1.3_Functions.cpp  2.2.1_FunctionReturn.cpp  2.2.3_FunctionReturn.cpp  2.2.4_FunctionReturn.cpp  2.4.1_FunctionParameters.cpp  2.4.2_FunctionParameters.cpp
Private/TestingPurpose/: crud.cpp  firstProgram1.cpp
Private/TheCherno/: pointers.cpp
Qt6_Whatever/: CMakeLists.txt  main.cpp
